# ANN

./: .gitignore  CMakeLists.txt  Makefile  README.md
data_sets/: Iris Data.ods  glass.data  iris.txt  maos.txt  momentos.txt  pos_maos.data  teste_exmp.txt  valores.txt
src/: Ann.cpp  Ann.h  Layer.cpp  Layer.h  Neurone.cpp  Neurone.h  main.cpp
